--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -2,7 +2,7 @@ name: Update RSS Feed
 
 on:
   schedule:
-    - cron: "0 */2 * * *"  # every 2 hours
+    - cron: "0 * * * *"  # every 2 hours
   workflow_dispatch:        # manual trigger option
 
 jobs:
